<resources>
    <string name="app_name">" "</string>
    <string name="title_campus_list">Campuses</string>
    <string name="title_campus_detail">Campus Detail</string>
    <string name="title_activity_webview">WebviewActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Main Page buttons -->
    <string name="btn_timetable"> Timetable</string>
    <string name= "btn_my_account"> My Account</string>
    <string name="btn_faq"> FAQ </string>
    <string name= "btn_campus_map"> Campus Map</string>
    <string name="btn_book_counselling"> Counselling Sessions</string>
    <string name="btn_email"> Email</string>


    <!-- Strings related to Navigation menu  buttons -->

    <string name="btn_course_information"> Course Information</string>
    <string name="btn_videos"> Videos</string>
    <string name="btn_one_note"> One Note</string>
    <string name="btn_one_drive"> One Drive </string>
    <string name="btn_tasks"> Tasks </string>
    <string name="btn_files"> My Files </string>
    <string name="btn_settings"> Settings </string>
    <string name="lbl_tools"> Tools </string>
    <string name="TAFELogo">TAFE Logo</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_user_settings">User Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="set_notifications_summary"> This setting controls wether or not you will recieve notifications from Tafe.</string>

    <string name="pref_title_display_name">Enter your name here</string>
    <string name="pref_default_display_name">User Tim</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Set Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Recieve Notifications from Tafe</string>

    <string name="pref_title_ringtone">Set Ringtone</string>
    <string name="set_notification_ringtone">Set your ringtone for notifications.</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="user_settings">User Settings</string>
    <string name="pref_map_settings">Map Settings</string>
    <string name="pref_notification_settings">Notification Settings</string>

    <string name="pref_rss_feed">RSS_Feed_Settings</string>
    <string name="rss_feed_settings">Control RSS Feed Display</string>
    <string name="rss_feed_summary">You can control if the RSS feed is displayed on the main page here.</string>
    <string name="data_summary">Set how often the Tafe Buddy uses data.</string>
    <string name="pref_title_data_sync">Set Data and Sync options></string>

</resources>
