<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/user_settings"
        android:key="@string/user_settings"></PreferenceCategory>
    <EditTextPreference

        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"
        />

    <PreferenceCategory
        android:title="@string/pref_rss_feed"
        android:key="@string/pref_rss_feed">

    </PreferenceCategory>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_rss_feed"
        android:title="@string/rss_feed_settings"
        android:summary="@string/rss_feed_summary">

    </SwitchPreference>
</PreferenceScreen>
