<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/pref_title_data_sync"
        android:key="@string/pref_header_data_sync"/>

    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

    <PreferenceCategory
        android:title="@string/pref_map_settings"
        android:key="@string/pref_map_settings">

    </PreferenceCategory>
    <SwitchPreference
        android:key="mapPreference"
        android:title = "Map Permission"
        android:summary="Set map Location Permissions"
        android:defaultValue= "true"/>

</PreferenceScreen>
